posts and comments validation at controller layer instead of service layer